Updated resume and added info

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <button type="button"><i class="fa fa-address-book fa-4x"></i></button>
 </div>
   <h2>Welcome</h2>
-  <p>Hi, my name is <strong>Mitra Farzami</strong>! I'm a freshman at Cornell University studying Information Science in the College of Agriculture and Life Sciences. I'm originally from New York City but currently living here in Ithaca.</p>
+  <p>Hi, my name is <strong>Mitra Farzami</strong>! I'm a sophomore at Cornell University studying Information Science in the College of Agriculture and Life Sciences, planning to double concentrate in UX/UI and Data Science. I'm originally from New York City but currently living here in Ithaca.</p>
   <p><em>Please explore the rest of my webpage for more information!</em></p>
 </body>
 </html>
