--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
   Source: <cite><a href="https://www.cornell.edu">Cornell University</a></cite>
     <p>Ithaca, NY</p>
     <p>Class of 2024</p>
-    <p>Intended Major: Information Science</p>
+    <p>Intended Major: Information Science, Intended Minor: Business</p>
   <h3>DALTON SCHOOL</h3>
   <!-- Source: https://www.dalton.org -->
   <img src="images/dalton.png"
@@ -46,6 +46,16 @@
     <p>Class of 2020</p>
 <hr/>
 <h2>RELEVANT EXPERIENCE</h2>
+<h3>TEN HOMAKASE New York, NY</h3>
+  <!-- Source: https://tenhomakase.com -->
+    <h4>Summer 2021-Present</h4>
+    <img src="images/homakase.png"
+    alt="Ten Homakase Logo">
+    Source: <cite><a href="https://tenhomakase.com">Ten Homakase</a></cite>
+    <ul>
+      <li>Managed company social media and designed graphics for all company events</li>
+      <li>Prospected 200 new partners and conducted cold outreach email campaigns</li>
+    </ul>
   <h3>GINGER FINDS New York, NY</h3>
   <!-- Source: https://gingerfinds.com -->
     <h4>Summer 2019</h4>
@@ -81,30 +91,11 @@
     </ul>
   </div>
 <hr/>
-<h2>LEADERSHIP</h2>
-  <h3>YEARBOOK</h3>
-    <h4>Dalton School 2016-2020</h4>
-    <ul>
-      <li>Worked as Editor-in-Chief senior year: Managed logistical planning for printing and distribution, managed student work, organized club meetings</li>
-      <li>Worked as Graphic Editor junior year: Oversaw and edited graphic team’s work, designed and illustrated content and formatted pages</li>
-    </ul>
-  <h3>STRIPE MAGAZINE</h3>
-    <h4>Dalton School 2016-2020</h4>
-    <ul>
-      <li>Worked as Editor-in-Chief senior year: Managed and edited student work, allocated roles and responsibilities, organized club meetings</li>
-      <li>Worked as Graphic Editor junior year: Oversaw and edited graphic team’s work, taught students graphic design software, created digital illustrations</li>
-    </ul>
-  <h3>GRAPHIC DESIGN CLUB</h3>
-    <h4>Dalton School 2017-2020</h4>
-    <ul>
-      <li>Co-Founder and Co-President: Organized club meetings, collected design requests from student body, assigned work to members</li>
-    </ul>
-<hr/>
 <h2>ACTIVITIES</h2>
-  <h3>PEER TUTORING PROGRAM</h3>
-    <h4>Dalton School 2018-2020</h4>
-  <h3>MATH TEAM</h3>
-    <h4>Dalton School 2018-2020</h4>
+  <h3>PI SIGMA EPSILON PROFESSIONAL BUSINESS FRATERNITY</h3>
+    <h4>Cornell University 2021-Present</h4>
+  <h3>SLOPE MEDIA MAGAZINE DESIGN TEAM</h3>
+    <h4>Cornell University 2021-Present</h4>
 <hr/>
 <h2>SKILLS</h2>
   <ul>
