minor alt text tweak

--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
     <h4>Summer 2018</h4>
     <!-- Source: https://bowerycap.com -->
     <img src="images/bowerycap.png"
-    alt="Bowery Capital">
+    alt="Bowery Capital Logo">
     Source: <cite><a href="https://bowerycap.com">Bowery Capital</a></cite>
     <ul>
       <li>Designed new logos and graphics for digital use</li>
